fixed clipPath + mobile optimization
onyl projects in mobile not good when scrolling to the next project, rest is great

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,9 @@
 
   .animatedPath {
     transition: transform 0.7s ease-in-out;
+    -moz-transition: transform 0.7s ease-in-out;  /* Firefox */
+    -webkit-transition: transform 0.7s ease-in-out;  /* Safari and Chrome */
+  
   }
 
   .mask {
